Add register form

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -11,7 +11,7 @@ html
     header#header
       .inner
         h1.header-logo
-          = link_to "Weinance", "#"
+          = link_to "Weinance", root_path
 
         ul.header-list
           li.header-item  
