--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -23,7 +23,7 @@ section#users
         tbody.users-table-body
           - @users.each do |user|
             tr id="user-#{user.id}"
-                td= user.weight
+                td= user.height
         /       td= @change
         /       td= @bmi
         /       td= user.created_at
