--- a/app/views/users/new.html.slim
+++ b/app/views/users/new.html.slim
@@ -22,6 +22,6 @@ section#register.register
 
         .form-group.register-form
           = f.label :password_confirmation, class: 'register-label'
-          = f.password_field :password_confirmation, class: 'form-control register-field'
+          = f.password_field :password_confirmation, class: 'form-control rheroegister-field'
 
         = f.submit '登録する', class: 'btn btn-primary register-submit'
