--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -23,6 +23,8 @@ html
               = link_to "Users", "#"
             li.header-item
               = link_to 'LogOut', logout_path, method: :delete
+            li.header-item
+              = current_user.name
           - else
             li.header-item
               = link_to "LogIn", login_path
