Add BMI and Date column to index

--- a/app/assets/stylesheets/pages/_users_index.scss
+++ b/app/assets/stylesheets/pages/_users_index.scss
@@ -32,3 +32,13 @@
     }
   }
 }
+
+.pluscolor {
+  color: $plus-color;
+  font-weight: bold;
+}
+
+.minuscolor {
+  color: $minus-color;
+  font-weight: bold;
+}
