--- a/app/assets/stylesheets/setting/_color.scss
+++ b/app/assets/stylesheets/setting/_color.scss
@@ -3,3 +3,5 @@ $main-color: #8CC182;
 $logo-color: #FFF61D;
 $gray-color: #F4F4F4;
 $gray-border: rgba(147,146,146, 0.6);
+$plus-color: #47B0B9;
+$minus-color: #EF5C89;
