Add static-page about

--- a/app/assets/stylesheets/pages/_users_show.scss
+++ b/app/assets/stylesheets/pages/_users_show.scss
@@ -1,11 +1,13 @@
 .show {
   &-name {
+    font-size: 5rem;
     text-align-last: left;
     padding-top: 20px;
   }
 
   .user-info {
     display: flex;
+    padding-top: 20px;
     align-items: center;
 
     .user-dl {
