--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -17,7 +17,7 @@ html
 
         ul.header-list
           li.header-item  
-            = link_to "Home", "#"
+            = link_to "Home", root_path
           li.header-item  
             = link_to "About", "#"
           - if current_user
