--- a/app/assets/stylesheets/pages/_users_index.scss
+++ b/app/assets/stylesheets/pages/_users_index.scss
@@ -23,11 +23,27 @@
           margin-right: 30px;
         }
       }
+      
+      .users-table-head {
+        th {
+          text-align: center;
+        }
+        .bmi-col {
+          width: 80px;
+        }
+      }
 
       &-head {
         display: flex;
         border-top: 1px solid $gray-border;
         border-bottom: 1px solid $gray-border;
+      }
+
+      .users-table-body {
+        td {
+          text-align: center;
+          vertical-align: middle;
+        }
       }
     }
   }
