--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -23,7 +23,11 @@ section#users
           - @users.each do |user|
             - if user.records.present?
               tr id="user-#{user.id}"
-                td= link_to user.name, user
+                td
+                  = link_to user, class:"table-usernames" do
+                    = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
+                    p.table-username
+                      = user.name
                 td= "#{user.records.order(:created_at).last.weight.round(1)} kg"
                 - if change(user).round(2) >= 0
                   td.pluscolor= sprintf("%+d%%", change(user).round(2))
