--- a/app/views/users/edit.html.slim
+++ b/app/views/users/edit.html.slim
@@ -5,6 +5,10 @@ section#edit
 
       = form_with model: @user, local: true do |f|
         .form-group.edit-form
+          = f.label 'User Image', class: 'edit-label'
+          = f.file_field :image, accept: 'image/jpeg,image/gif,image/png', class: 'form-control edit-field'
+
+        .form-group.edit-form
           = f.label :name, class: 'edit-label'
           = f.text_field :name, class: 'form-control edit-field'
 
