Improve form design

--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -8,7 +8,7 @@ section#users
     .users-body
       ul.users-body-switch
         li Favorites
-        li Weight
+        li All
       
       table.users-table
         thead.users-table-head
