--- a/app/assets/stylesheets/pages/_records_new.scss
+++ b/app/assets/stylesheets/pages/_records_new.scss
@@ -1,16 +1,59 @@
-.newrec {
-  padding-top: 80px;
+.record {
+  background: #34495e;
+  height: 100vh;
 
-  &-form {
-    display: flex;
-    padding-top: 20px;
+  .box {
+    width: 400px;
+    padding: 40px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: #2d3436;
+    text-align: center;
 
-    .newrec-label {
-      margin-right: 20px;
+    h1 {
+      color: white;
+      text-transform: uppercase;
     }
-  }
 
-  &-submit {
-    margin-top: 10px;
+    input[type="number"] {
+      border: 0;
+      background: none;
+      display: block;
+      margin: 20px auto;
+      text-align: center;
+      border: 2px solid #2980b9;
+      padding: 14px 10px;
+      width: 200px;
+      outline: none;
+      color: white;
+      border-radius: 24px;
+      transition: 0.25s;
+    }
+
+    input[type="number"]:focus {
+      width: 280px;
+      border-color: #55efc4;
+    }
+
+    input[type="submit"] {
+      border: 0;
+      background: none;
+      display: block;
+      margin: 20px auto;
+      text-align: center;
+      border: 2px solid #55efc4;
+      padding: 14px 40px;
+      outline: none;
+      color: white;
+      border-radius: 24px;
+      transition: 0.25s;
+      cursor: pointer;
+
+      &:hover {
+        background: #55efc4;
+      }
+    }
   }
 }
