--- a/app/views/records/new.html.slim
+++ b/app/views/records/new.html.slim
@@ -1,11 +1,8 @@
-section#newrec.newrec
-  .inner
-    h1.newrec-tit 体重を記録する
+section.record
+  = form_with model: @record, class:'box', local: true do |f|
+    h1 Record Now!
 
-    = form_with model: @record, local: true do |f|
-      .form-group.newrec-form
-        = f.label :weight, class: 'newrec-label'
-        = f.text_field :weight, class: 'form-control newrec-field'
+    = f.number_field :weight, step: 0.1, placeholder: 'Weight'
 
-      = f.submit 'Record!!', class: 'btn btn-primary newrec-submit'
+    = f.submit 'Record!!'
 
