--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -15,7 +15,7 @@ section#users
           tr
             th Name
             th Last Weight
-            th 1m Change
+            th 1month Chg%
             th.bmi-col BMI
             th Date
         
