--- a/app/assets/stylesheets/pages/_user_new.scss
+++ b/app/assets/stylesheets/pages/_user_new.scss
@@ -1,14 +1,12 @@
 .register {
   background: #34495e;
   height: 100vh;
+  padding-top: 50px;
 
   .box {
     width: 400px;
     padding: 40px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    margin: 0 auto; 
     background: #2d3436;
     text-align: center;
 
