--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -17,7 +17,7 @@ section#users
             th Last Weight
             th 1month Chg%
             th.bmi-col BMI
-            th Date
+            th.date-col Date
         
         tbody.users-table-body
           - @users.each do |user|
