--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -44,6 +44,7 @@ html
         .alert.alert-success= flash.notice
 
     = yield
+    = render 'layouts/footer'
 
     = debug(params) if Rails.env.development?
 
