--- a/app/assets/stylesheets/pages/_users_index.scss
+++ b/app/assets/stylesheets/pages/_users_index.scss
@@ -51,6 +51,7 @@
         td {
           text-align: center;
           vertical-align: middle;
+          height: 50px;
 
           .table-userimage {
             object-fit: cover;
