--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -40,8 +40,10 @@ html
     .header-space
     
     .flash
-      - if flash.notice.present?
-        .alert.alert-success= flash.notice
+      - if flash.present?
+        - flash.each do |type, message|
+          div class="alert alert-#{type}"
+            = message
 
     = yield
     = render 'layouts/footer'
