Add gest account info

--- a/app/assets/stylesheets/pages/_header.scss
+++ b/app/assets/stylesheets/pages/_header.scss
@@ -9,9 +9,12 @@
 
   .inner {
     height: 100%;
+  }
+  nav {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 100%;
 
     .header-logo {
       font-size: 4rem;
