--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -13,6 +13,7 @@ section#users
       table.users-table
         thead.users-table-head
           tr
+            th.follow-col 
             th Name
             th Last Weight
             th 1month Chg%
@@ -23,6 +24,12 @@ section#users
           - @users.each do |user|
             - if user.records.present?
               tr id="user-#{user.id}"
+                td id="follow-btn-#{user.id}"
+                  - unless current_user == user
+                    - if current_user.following?(user)
+                      = link_to icon('fas', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :delete
+                    - else
+                      = link_to icon('far', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :post                 
                 td
                   = link_to user, class:"table-usernames" do
                     = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
