--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -25,7 +25,7 @@ section#users
             - if user.records.present?
               tr id="user-#{user.id}"
                 td id="follow-btn-#{user.id}"
-                  - unless current_user == user
+                  - if current_user && !(current_user == user)
                     - if current_user.following?(user)
                       = link_to icon('fas', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :delete
                     - else
