--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -25,11 +25,7 @@ section#users
             - if user.records.present?
               tr id="user-#{user.id}"
                 td id="follow-btn-#{user.id}"
-                  - if current_user && !(current_user == user)
-                    - if current_user.following?(user)
-                      = link_to icon('fas', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :delete
-                    - else
-                      = link_to icon('far', 'star', class:'follow-btn'), user_relationships_path(user.id), method: :post                 
+                  = render partial: 'follow', locals: { user: user }
                 td
                   = link_to user, class:"table-usernames" do
                     = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
