--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -6,40 +6,75 @@ section#users
     .users-search
       / 検索ボックス
     .users-body
-      ul.users-body-switch
-        li Favorites
-        li All
-      
-      table.users-table
-        thead.users-table-head
-          tr
-            th.follow-col 
-            th Name
-            th Last Weight
-            th 1month Chg%
-            th.bmi-col BMI
-            th.date-col Date
-        
-        tbody.users-table-body
-          - @users.each do |user|
-            - if user.records.present?
-              tr id="user-#{user.id}"
-                td id="follow-btn-#{user.id}"
-                  = render partial: 'follow', locals: { user: user }
-                td
-                  = link_to user, class:"table-usernames" do
-                    = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
-                    p.table-username
-                      = user.name
-                td= "#{user.records.order(:created_at).last.weight.round(1)} kg"
-                - if change(user).round(2) >= 0
-                  td.pluscolor= sprintf("%+d%%", change(user).round(2))
-                - else
-                  td.minuscolor= sprintf("%d%%", change(user).round(2))
-                td= bmi(user)
-                td= user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
-      .d-flex.justify-content-center.mt-3
-        == pagy_bootstrap_nav(@pagy) 
+      .users-body-tabs
+        <input id="all-users" type="radio" name="tab-item" checked>
+        <label class="tab-item _all-label" for="all-users">All</label>
+        <input id="fav-users" type="radio" name="tab-item">
+        <label class="tab-item _fav-label" for="fav-users">Favorites</label>
+
+        .tab-content#all-content
+          table.users-table
+            thead.users-table-head
+              tr
+                th.follow-col 
+                th Name
+                th Last Weight
+                th 1month Chg%
+                th.bmi-col BMI
+                th.date-col Date
+            
+            tbody.users-table-body
+              - @users.each do |user|
+                - if user.records.present?
+                  tr id="user-#{user.id}"
+                    td id="follow-btn-#{user.id}"
+                      = render partial: 'follow', locals: { user: user }
+                    td
+                      = link_to user, class:"table-usernames" do
+                        = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
+                        p.table-username
+                          = user.name
+                    td= "#{user.records.order(:created_at).last.weight.round(1)} kg"
+                    - if change(user).round(2) >= 0
+                      td.pluscolor= sprintf("%+d%%", change(user).round(2))
+                    - else
+                      td.minuscolor= sprintf("%d%%", change(user).round(2))
+                    td= bmi(user)
+                    td= user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
+          .d-flex.justify-content-center.mt-3
+            == pagy_bootstrap_nav(@pagy_all) 
+
+        .tab-content#fav-content
+          table.users-table
+            thead.users-table-head
+              tr
+                th.follow-col 
+                th Name
+                th Last Weight
+                th 1month Chg%
+                th.bmi-col BMI
+                th.date-col Date
+            
+            tbody.users-table-body
+              - @favos.each do |user|
+                - if user.records.present? && current_user.following?(user)
+                  tr id="user-#{user.id}"
+                    td id="follow-btn-#{user.id}"
+                      = render partial: 'follow', locals: { user: user }
+                    td
+                      = link_to user, class:"table-usernames" do
+                        = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
+                        p.table-username
+                          = user.name
+                    td= "#{user.records.order(:created_at).last.weight.round(1)} kg"
+                    - if change(user).round(2) >= 0
+                      td.pluscolor= sprintf("%+d%%", change(user).round(2))
+                    - else
+                      td.minuscolor= sprintf("%d%%", change(user).round(2))
+                    td= bmi(user)
+                    td= user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
+          .d-flex.justify-content-center.mt-3
+            == pagy_bootstrap_nav(@pagy_fav) 
 
   - if current_user
     .record-btn 
