--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -58,25 +58,26 @@ section#users
                   th.date-col Date
               
               tbody.users-table-body
-                - @favos.each do |user|
-                  - if user.records.present? && current_user.following?(user)
-                    tr id="user-#{user.id}"
-                      td id="follow-btn-#{user.id}"
-                        = render partial: 'follow', locals: { user: user }
-                      td
-                        = link_to user, class:"table-usernames" do
-                          = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
-                          p.table-username
-                            = user.name
-                      td= "#{user.records.order(:created_at).last.weight.round(1)} kg"
-                      - if change(user).round(2) >= 0
-                        td.pluscolor= sprintf("%+d%%", change(user).round(2))
-                      - else
-                        td.minuscolor= sprintf("%d%%", change(user).round(2))
-                      td= bmi(user)
-                      td= user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
+                - if @favos.present?
+                  - @favos.each do |user|
+                    - if user.records.present? && current_user.following?(user)
+                      tr id="user-#{user.id}"
+                        td id="follow-btn-#{user.id}"
+                          = render partial: 'follow', locals: { user: user }
+                        td
+                          = link_to user, class:"table-usernames" do
+                            = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
+                            p.table-username
+                              = user.name
+                        td= "#{user.records.order(:created_at).last.weight.round(1)} kg"
+                        - if change(user).round(2) >= 0
+                          td.pluscolor= sprintf("%+d%%", change(user).round(2))
+                        - else
+                          td.minuscolor= sprintf("%d%%", change(user).round(2))
+                        td= bmi(user)
+                        td= user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
             .d-flex.justify-content-center.mt-3
-              == pagy_bootstrap_nav(@pagy_fav)
+              == pagy_bootstrap_nav(@pagy_fav) if @pagy_fav.present?
           - else
             p.logout-tab-content ログインすると表示されます。 
 
