--- a/app/views/users/index.html.slim
+++ b/app/views/users/index.html.slim
@@ -83,4 +83,4 @@ section#users
 
   - if current_user
     .record-btn 
-      = link_to "+", new_record_path
+      = link_to "+", new_record_path, id:'record_submit'
