--- a/app/views/records/index.html.slim
+++ b/app/views/records/index.html.slim
@@ -25,23 +25,7 @@ section#users
                 th.date-col Date
             
             tbody.users-table-body
-              - @records.each do |record|
-                - if record.present?
-                  tr id="user-#{record.id}"
-                    td id="follow-btn-#{record.user.id}"
-                      = render partial: 'follow', locals: { user: record.user }
-                    td
-                      = link_to record.user, class:"table-usernames" do
-                        = record.user.image.thumb25.url.present? ? image_tag(record.user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
-                        p.table-username
-                          = record.user.name
-                    td= "#{record.user.records.order(:created_at).last.weight.round(1)} kg"
-                    - if change(record.user).round(2) >= 0
-                      td.pluscolor= sprintf("%+d%%", change(record.user).round(2))
-                    - else
-                      td.minuscolor= sprintf("%d%%", change(record.user).round(2))
-                    td= bmi(record.user)
-                    td= record.user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
+              = render partial: 'record_table', collection: @records, as: 'record'
           .d-flex.justify-content-center.mt-3
             == pagy_bootstrap_nav(@pagy_all) 
 
@@ -58,24 +42,8 @@ section#users
                   th.date-col Date
               
               tbody.users-table-body
-                - if @favos.present?
-                  - @favos.each do |record|
-                    - if record.user.records.present? && current_user.following?(record.user)
-                      tr id="user-#{record.user.id}"
-                        td id="follow-btn-#{record.user.id}"
-                          = render partial: 'follow', locals: { user: record.user }
-                        td
-                          = link_to record.user, class:"table-usernames" do
-                            = record.user.image.thumb25.url.present? ? image_tag(record.user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
-                            p.table-username
-                              = record.user.name
-                        td= "#{record.user.records.order(:created_at).last.weight.round(1)} kg"
-                        - if change(record.user).round(2) >= 0
-                          td.pluscolor= sprintf("%+d%%", change(record.user).round(2))
-                        - else
-                          td.minuscolor= sprintf("%d%%", change(record.user).round(2))
-                        td= bmi(record.user)
-                        td= record.user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
+                - if @fav_records.present?
+                  = render partial: 'record_table', collection: @fav_records, as: 'record'
             .d-flex.justify-content-center.mt-3
               == pagy_bootstrap_nav(@pagy_fav) if @pagy_fav.present?
           - else
