--- a/app/views/records/_record_table.html.slim
+++ b/app/views/records/_record_table.html.slim
@@ -10,20 +10,21 @@ table.users-table
   tbody.users-table-body
     - if records.present?
       - records.each do |record|
+        - user = record.user
         tr id="record-#{record.id}"
-          td id="follow-btn-#{record.user.id}"
-            = render partial: 'follow', locals: { user: record.user }
+          td id="follow-btn-#{user.id}"
+            = render partial: 'follow', locals: { user: user }
           td
-            = link_to record.user, class:"table-usernames" do
-              = record.user.image.thumb25.url.present? ? image_tag(record.user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
+            = link_to user, class:"table-usernames" do
+              = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
               p.table-username
-                = record.user.name
-          td= "#{record.user.records.order(:created_at).last.weight.round(1)} kg"
-          - if change(record.user).round(2) >= 0
-            td.pluscolor= sprintf("%+d%%", change(record.user).round(2))
+                = user.name
+          td= "#{user.lastest_weight} kg"
+          - if user.weight_change_rate >= 0
+            td.pluscolor= "+ #{user.weight_change_rate} %"
           - else
-            td.minuscolor= sprintf("%d%%", change(record.user).round(2))
-          td= bmi(record.user)
-          td= record.user.records.order(:created_at).last.created_at.strftime("%Y/%m/%d")
+            td.minuscolor= "− #{user.weight_change_rate.abs} %"
+          td= user.bmi
+          td= record.created_at.strftime("%Y/%m/%d")
 .d-flex.justify-content-center.mt-3
   == pagy_bootstrap_nav(pagy_var) if pagy_var.present?
