--- a/app/views/relationships/create.js.erb
+++ b/app/views/relationships/create.js.erb
@@ -1,1 +1,1 @@
-$("#follow-btn-<%= @follow_user.id %>").html("<%= j(render partial: 'users/follow', locals: { user: @follow_user }) %>");
+$("#follow-btn-<%= @follow_user.id %>").html("<%= j(render partial: 'records/follow', locals: { user: @follow_user }) %>");
