--- a/app/views/records/_record_table.html.slim
+++ b/app/views/records/_record_table.html.slim
@@ -16,7 +16,8 @@ table.users-table
             = render partial: 'follow', locals: { user: user }
           td
             = link_to user, class:"table-usernames" do
-              = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') : image_tag("/assets/default_top_image.png",size:"25x25")
+              = user.image.thumb25.url.present? ? image_tag(user.image.thumb25.url, class:'table-userimage') :\
+                                                  image_tag("/assets/default_top_image.png",size:"25x25")
               p.table-username
                 = user.name
           td= "#{user.lastest_weight} kg"
